@@ -22,6 +22,58 @@
 
   <table border="0" cellpadding="5" cellspacing="0">
     <tr>
+      <td class="tdh">2003.12.16</td>
+    </tr>
+    <tr>
+      <td class="block">
+      <!-- ---------------------------------------------------------------- -->
+      <table class="inner" border="1" cellpadding="2" cellspacing="3">
+        <tr>
+	  <td class="block"></td>
+	  <td class="block">IA32</td>
+	  <td class="block">IA64</td>
+	  <td class="block">SPARC</td>	  
+	</tr>
+        <tr>
+	  <td class="block">Linux</td>
+          <td class="block">Debian 3.0 (2.4.18 kernel, gcc 2.95.4, glibc 2.2.5),<br>
+	                    Red Hat 9 (2.4.20 kernel, gcc 3.2, glibc 2.3.2 with NPTL)*,<br>
+ 	                    Red Hat 8.0 (2.4.18 kernel, gcc 3.2, glibc 2.2.93),<br>
+                            Red Hat 7.2 (2.4.7 kernel, gcc 2.96, glibc 2.2.5),<br>
+                            SuSE 8.1 (2.4.19 kernel, gcc 3.2, glibc 2.2.5),<br>
+                            SuSE 7.3 (2.4.10 kernel, gcc 2.95.3, glibc 2.2.4)</td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block"><i>not supported</i></td>
+	</tr>
+        <tr>
+	  <td class="block">Solaris</td>
+	  <td class="block"><i>unknown</i></td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block">Solaris 8 (gcc 2.95.3)</td>
+	</tr>
+        <tr>
+	  <td class="block">Windows</td>
+	  <td class="block">Windows XP Pro (MSVC++ .NET),<br>
+	                    Windows 2000 (MSVC++ 6.0),<br>
+	                    Windows NT 4 (MSVC++ 6.0)</td>
+	  <td class="block"><i>should work</i></td>
+	  <td class="block"><i>not supported</i></td>	  	  	  
+	</tr>
+      </table>
+      <!-- ---------------------------------------------------------------- -->      
+      </td>
+    </tr>
+  </table>
+
+  <p class="desc">List of known combinations for version 2003.12.16
+  (&quot;<i>should work</i>&quot; means, that this combination is
+  expected to work, but wasn't confirmed till now).<br>
+  * = To get the job done, please consult the Know Issues page
+  [<a href="issues.html">here</a>]
+  first!<br><br></p>
+
+  <table border="0" cellpadding="5" cellspacing="0">
+    <tr>
       <td class="tdh">2003.05.10</td>
     </tr>
     <tr>
