@@ -37,18 +37,16 @@
           Contribute to the project!</li>
       <font size=-3>&#160;<br></font>	  
       <li>[<a href="doc/matrix.html">show</a>]
-          Supported Platforms Matrix - latest</li>
+          Supported Platforms Matrix</li>
       <li>[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/iometer/iometer/Docs/Iometer.pdf?rev=HEAD">show</a>]
-          Iometer User's Guide - from October 20, 1999 (for delta see Additional Release Notes)</li>
-      <li>[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/iometer/iometer/README?rev=HEAD">show</a>]
-          Additional Release Notes for Iometer - latest</li>
+          Iometer User's Guide</li>
 <!--      <li>[<a href="doc/faq.html">show</a>]
           Frequently Asked Questions - latest</li> -->
       <li>[<a href="doc/issues.html">show</a>]
-          Known Issues - latest</li>
+          List of Known Issues</li>
       <font size=-3>&#160;<br></font>	  
-      <li>[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/iometer/iometer/README?rev=HEAD">show</a>]
-          Iometer Developer's Guide - first draft (see second part of the document)</li>
+      <li>[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/iometer/iometer/DEVGUIDE?rev=HEAD">show</a>]
+          Iometer Developer's Guide - latest draft</li>
     </ul>
   </p>
 
@@ -56,6 +54,48 @@
 
   <p class="block">2. Downloads:<br />
     <ul>
+      <li>Version 2003.12.16
+        <table class="hidden" border="0" cellpadding="0" cellspacing="0">	
+	  <tr><td colspan="7"><font size=-3>&#160;<br></font></td></tr>
+	  <tr>
+	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
+	    <td><nobr>Prebuild binary - Linux 32 bit</nobr></td>
+	    <td>&#160;</td>
+	    <td align="center">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.12.16.linux-bin.tar.gz?download">download</a>]</td>
+	    <td>&#160;</td>
+	    <td align="right"><nobr>1484cb87367c14ffc20d88abf07a01ce (md5sum)</nobr></td>	    
+	    <td width="90%">&#160;</td>
+	  </tr>	  
+	  <tr>
+	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
+	    <td><nobr>Prebuild binary - Windows 32 bit</nobr></td>
+	    <td>&#160;</td>
+	    <td align="center">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.12.16.win32-bin.zip?download">download</a>]</td>
+	    <td>&#160;</td>
+	    <td align="right"><nobr>47581217b09bb45a4cb8804e8e51fd64 (md5sum)</nobr></td>
+	    <td width="90%">&#160;</td>
+	  </tr>	  
+	  <tr><td colspan="7"><font size=-3>&#160;<br></font></td></td>	  
+	  <tr>
+	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
+	    <td><nobr>Documention - All platforms</nobr></td>
+	    <td>&#160;</td>
+	    <td align="center">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.12.16.common-docu.tar.gz?download">download</a>]</td>
+	    <td>&#160;</td>
+	    <td align="right"><nobr>8637442c836eb49a850ce06fb27c8424 (md5sum)</nobr></td>
+	    <td width="90%">&#160;</td>
+	  </tr>	  
+	  <tr>
+	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
+	    <td><nobr>Sources - All platforms</nobr></td>
+	    <td>&#160;</td>
+	    <td align="center">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.12.16.common-src.tar.gz?download">download</a>]</td>
+	    <td>&#160;</td>
+	    <td align="right"><nobr>873a18a38928e428365e87a92aa1bd88 (md5sum)</nobr></td>
+	    <td width="90%">&#160;</td>
+	  </tr>	  
+	  <tr><td colspan="7"><font size=-3>&#160;<br></font></td></td>
+        </table></li>
       <li>Version 2003.05.10
         <table class="hidden" border="0" cellpadding="0" cellspacing="0">	
 	  <tr><td><font size=-3>&#160;<br></font></td></td>
@@ -63,38 +103,38 @@
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Prebuild binary - Linux 32 bit</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.05.10.linux-bin.tar.gz?download">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.05.10.linux-bin.tar.gz?download">download</a>]</td>
 	  </tr>	  
 	  <tr>
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Prebuild binary - Solaris on Sparc</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.05.10.solaris-bin.tar.gz?download">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.05.10.solaris-bin.tar.gz?download">download</a>]</td>
 	  </tr>	  
 	  <tr>
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Prebuild binary - Windows 32 bit</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.05.10.win32-bin.zip?download">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.05.10.win32-bin.zip?download">download</a>]</td>
 	  </tr>	  
 	  <tr>
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Prebuild binary - Windows 64 bit (on IA64)</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.05.10.win64.ia64-bin.zip?download">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.05.10.win64.ia64-bin.zip?download">download</a>]</td>
 	  </tr>	  
 	  <tr><td><font size=-3>&#160;<br></font></td></td>	  
 	  <tr>
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Documention - All platforms</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.05.10.common-docu.tar.gz?download">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.05.10.common-docu.tar.gz?download">download</a>]</td>
 	  </tr>	  
 	  <tr>
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Sources - All platforms</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.05.10.common-src.tar.gz?download">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.05.10.common-src.tar.gz?download">download</a>]</td>
 	  </tr>	  
 	  <tr><td><font size=-3>&#160;<br></font></td></td>
         </table></li>
@@ -105,7 +145,7 @@
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Prebuild binary - Linux 32 bit</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.02.15.linux-bin.tar.gz?download">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.02.15.linux-bin.tar.gz?download">download</a>]</td>
 	  </tr>	  
 	  <tr>
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
@@ -118,13 +158,13 @@
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Documention - All platforms</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.02.08.common-docu.tar.gz?download">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.02.08.common-docu.tar.gz?download">download</a>]</td>
 	  </tr>
 	  <tr>
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Sources - All platforms</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.02.15.common-src.tar.gz?download">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.02.15.common-src.tar.gz?download">download</a>]</td>
 	  </tr>	  
 	  <tr><td><font size=-3>&#160;<br></font></td></td>
         </table></li>
@@ -135,26 +175,26 @@
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Prebuild binary - Linux 32 bit</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://www.edelbyte.org/misc/iometer/iometer-2003.02.08.linux-bin.tar.gz">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://www.edelbyte.org/misc/iometer/iometer-2003.02.08.linux-bin.tar.gz">download</a>]</td>
 	  </tr>	  
 	  <tr>
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Prebuild binary - Windows 32 bit</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://www.edelbyte.org/misc/iometer/iometer-2003.02.08.win32-bin.zip">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://www.edelbyte.org/misc/iometer/iometer-2003.02.08.win32-bin.zip">download</a>]</td>
 	  </tr>	  
 	  <tr><td><font size=-3>&#160;<br></font></td></td>
 	  <tr>
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Documention - All platforms</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.02.08.common-docu.tar.gz?download">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://prdownloads.sourceforge.net/iometer/iometer-2003.02.08.common-docu.tar.gz?download">download</a>]</td>
 	  </tr>	  
 	  <tr>
 	    <td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	    <td><nobr>Sources - All platforms</nobr></td>
 	    <td><nobr>&#160;</nobr></td>
-	    <td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://www.edelbyte.org/misc/iometer/iometer-2003.02.08.common-src.tar.gz">download</a>]</td>
+	    <td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://www.edelbyte.org/misc/iometer/iometer-2003.02.08.common-src.tar.gz">download</a>]</td>
 	  </tr>	  
         </table></li>
     </ul>
@@ -169,14 +209,14 @@
 	<td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	<td><nobr>iometer-user mailing list</nobr></td>
 	<td><nobr>&#160;</nobr></td>
-	<td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://lists.sourceforge.net/lists/listinfo/iometer-user">subscribe</a>
+	<td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://lists.sourceforge.net/lists/listinfo/iometer-user">subscribe</a>
 	                |<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=https://sourceforge.net/mailarchive/forum.php?forum_id=34401">Archive</a>]</td>
       </tr>	  
       <tr>
 	<td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	<td><nobr>iometer-devel mailing list</nobr></td>
 	<td><nobr>&#160;</nobr></td>
-	<td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://lists.sourceforge.net/lists/listinfo/iometer-devel">subscribe</a>
+	<td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=http://lists.sourceforge.net/lists/listinfo/iometer-devel">subscribe</a>
  	                |<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=https://sourceforge.net/mailarchive/forum.php?forum_id=30200">Archive</a>]</td>
       </tr>	  
       <tr><td><font size=-3>&#160;<br></font></td></td>
@@ -184,7 +224,7 @@
 	<td><nobr><ul style="margin-top: 0px; margin-bottom: 0px;"><li></ul></nobr></td>
 	<td><nobr>Open Discussion forum</nobr></td>
 	<td><nobr>&#160;</nobr></td>
-	<td width="%90">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=https://sourceforge.net/forum/forum.php?forum_id=124687">goto</a>]</td>
+	<td width="90%">[<a href="http://www.iometer.org/cgi-bin/jump.cgi?URL=https://sourceforge.net/forum/forum.php?forum_id=124687">goto</a>]</td>
       </tr>	  
     </table></li>
   </p>
